# bio-text

./: .gitignore  CMakeLists.txt  README.md  bio-text.sln  bio-text.ui  biotext.py  letter.py  letterset.py  main.py  requirements.txt  standard.py  style.py  textdraw.py  window.py
bio-text/: bio-text.aps  bio-text.rc  bio-text.vcxproj  bio-text.vcxproj.filters
bio-text/headers/: Application.h  Curves.h  DockWidget.h  GUIObject.h  MainWindow.h  Style.h  Texture.h  VAO.h  VBO.h  Window.h  logo.h
bio-text/include/glad/: glad.h
bio-text/include/imgui/: imgui.h
bio-text/lib/: glfw3Rel32.lib  glfw3Rel64.lib
bio-text/sources/: Application.cpp  Curves.cpp  DockWidget.cpp  EBO.cpp  GUIObject.cpp  MainWindow.cpp  Style.cpp  Texture.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
bio-text/sources/GUI/: FontView.cpp  FontView.h  ImageView.cpp  ImageView.h  SceneView.cpp  SceneView.h  StyleView.cpp  StyleView.h  TextView.cpp  TextView.h
bio-text/sources/GUI/File Browser/: ImFileBrowser.h
handwritings/: miquy.json  miquy.py  miquyC.json  standard.json
src/: CMakeLists.txt  Curves.cpp  Curves.h  DockWidget.cpp  EBO.h  Font.cpp  Font.h  FontPanel.cpp  FontPanel.h  FontView.cpp  FontView.h  ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  SceneView.cpp  SceneView.h  Style.cpp  StyleView.cpp  TextView.cpp  TextView.h  Texture.cpp  Texture.h  VAO.cpp  Window.h  main.cpp  resource.h
